add CIQ